--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@expo/vector-icons": "^12.0.5",
     "@react-navigation/core": "^6.1.0",
     "@react-navigation/native": "^6.0.6",
+    "axios": "^0.25.0",
     "expo": "~43.0.2",
     "expo-status-bar": "~1.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-dotenv": "^3.3.1",
     "react-native-gesture-handler": "1.10.2",
     "react-native-reanimated": "2.2.0",
     "react-native-safe-area-context": "^3.3.2",
